[package]
name = "opti-set-int"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
bit-set = "0.10.0"
constcat = "0.6.1"
rand = { version = "0.10" }
roaring = "0.11.3"
rust_intervals = "1.0.0"

[dev-dependencies]
proptest = "1.5"
