[package]
name = "opti-set-int"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
bit-set = "0.10.0"
constcat = "0.6.1"
rand = { version = "0.10" }
roaring = "0.11.3"
rust_intervals = "1.0.0"
rustc-hash = "2.1.2"
avl = "0.8.0"
rbtree = "0.2.0"
range-set-blaze = "0.5.0"
fixedbitset = "0.5.7"
bitvec = "1.0.1"
idlset = "0.2.5"
croaring = "2.6.0"

[dev-dependencies]
proptest = "1.5"
